--- a/src/components/weather-details/weather-details.css
+++ b/src/components/weather-details/weather-details.css
@@ -2,6 +2,21 @@
     padding: 16px;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px; /* Bu yerda gap qiymatini moslashtirish mumkin */
-     width: 50%;
+    gap: 20px; 
+    width: 50%;
+}
+
+@media screen and (max-width: 768px) {
+    .weather__details {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 10px;
+        justify-content: center;
+    }
+}
+@media screen and (max-width: 520px) {
+    .weather__details {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
