--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,50 @@
 * {
-margin: 0 ;
-padding: 0;
-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 body {
   background-color: var(--background-color);
 }
 
 :root {
-  --background-color:#ededef;
-  --primary-color:#758BF1;
+  --background-color: #ededef;
+  --primary-color: #758BF1;
 }
 
 .container {
-  max-width:1440px;
-  width:100%;
+  max-width: 1440px;
+  width: 100%;
   margin: 0 auto;
 }
 
+
 .main {
- display: flex;
- justify-content: center;
- align-items: center;
- flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 100vh;
+}
+
+.weather-left {
+  flex: 1 1 50%;
+  padding: 20px;
+}
+
+.weather-right {
+  flex: 1 1 50%;
+  padding: 20px;
+}
+
+@media (max-width: 768px) {
+  .main {
+    flex-direction: column;
+    height: auto; /* Balandlikni avtomatik qiling */
+  }
+
+  .weather-left, .weather-right {
+    flex: 1 1 100%;
+  }
 }
