--- a/src/components/current-weather/current-weather.css
+++ b/src/components/current-weather/current-weather.css
@@ -1,18 +1,19 @@
 .current-weather {
     background-color: white;
     padding: 32px;
-    height: auto; /* min-height o'rniga height */
+    height: auto; 
     border-radius: 16px;
     width: 50%;
-    display: flex; /* Flexbox qo'shildi */
-    flex-direction: column; /* Kolonna yo'nalishi qo'shildi */
-    justify-content: center; /* Vertikal markazda joylashtirish */
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center;
   }
   
   .current-weather__icon {
-    width: 256px;
-    height: 256px;
+    width: 250px;
+    height: 250px;
     display: block;
+    padding:20px;
     margin: 0 auto;
   }
   
