--- a/src/components/weather-details/weather-details.css
+++ b/src/components/weather-details/weather-details.css
@@ -16,7 +16,8 @@
 }
 @media screen and (max-width: 520px) {
     .weather__details {
-        display: flex;
-        flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        width: 100px;
     }
 }
